--- a/hd.html
+++ b/hd.html
@@ -15,3 +15,4 @@ background-image: url('https://s151.convertio.me/p/d_-SlHWSqhvCo6wMN7wcbA/8c8aaf
 background-repeat:no-repeat;
   background-size: cover;
 }
+</html>
